# Actor-UPCXX

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake-Aux/Modules/: FindEigen3.cmake  FindMetis.cmake  FindNetCDF.cmake
src/actorlib/: AbstractInPort.cpp  AbstractInPort.hpp  AbstractOutPort.cpp  AbstractOutPort.hpp  AcquisitionResult.cpp  AcquisitionResult.hpp  Actor.cpp  Actor.hpp  ActorData.hpp  ActorGraph.cpp  ActorGraph.hpp  ActorImpl.cpp  ActorImpl.hpp  ActorState.cpp  ActorState.hpp  ActorTriggers.cpp  ActorTriggers.hpp  ActorWrapper.hpp  CMakeLists.txt  Channel.hpp  Definitions.hpp  Distribution.cpp  Distribution.hpp  DynamicActorGraph.cpp  DynamicActorGraph.hpp  InPort.hpp  MigrationDispatcher.hpp  MultipleActorAGraph.hpp  OutPort.hpp  PortConnectorBase.hpp  PortGraph.cpp  PortGraph.hpp  PortInfoConvey.hpp  PortInformation.hpp  PortInformationBase.hpp  SerializeOptional.hpp  SingleActorAGraph.hpp  Statistics.hpp  TaskDeque.cpp  TaskDeque.hpp  (+6 more)
src/applications/pond/: main.cpp
src/applications/pond/actor/: DoubleHeightSimulationActor.cpp  DoubleHeightSimulationActor.hpp  SimulationActor.cpp  SimulationActor.hpp  SimulationActorBase.cpp  SimulationActorBase.hpp  SimulationActorBaseData.hpp  SimulationActorState.hpp
src/applications/pond/block/: BlockCommunicator.cpp  BlockCommunicator.hpp  SWE_Block.cpp  SWE_Block.hh  SWE_WaveAccumulationBlock.cpp  SWE_WaveAccumulationBlock.hh
src/applications/pond/orchestration/: ActorOrchestrator.cpp  ActorOrchestrator.hpp  OrchestrationUtility.cpp  OrchestrationUtility.hpp  UnevenActorOrchestrator.cpp  UnevenActorOrchestrator.hpp
src/applications/pond/scenario/: NetCdfData.cpp  NetCdfData.hpp  NetCdfScenario.cpp  NetCdfScenario.hpp  SWE_Scenario.hh  SWE_simple_scenarios.hh  ScalableMultiDropScenario.cpp  ScalableMultiDropScenario.hpp  ScalablePoolDropScenario.cpp  ScalablePoolDropScenario.hpp  SimulationArea.cpp  SimulationArea.hpp  SymmetricDambreakScenario.cpp  SymmetricDambreakScenario.hpp
src/applications/pond/solver/: AugRie.hpp  AugRieCUDA.h  AugRieFun.hpp  AugRieGeoClaw.hpp  AugRie_SIMD.hpp  FWave.hpp  FWaveCuda.h  FWaveVec.hpp  HLLEFun.hpp  Hybrid.hpp  SIMD_COSTS.hpp  SIMD_DEFINITIONS.hpp  SIMD_TYPES.hpp  WavePropagation.hpp
src/applications/pond/util/: Configuration.cpp  Configuration.hpp  Logger.cpp  Logger.hh  ProgressBar.hh  args.hh  help.hh
src/applications/pond/writer/: NetCdfWriter.cpp  NetCdfWriter.hh  VtkWriter.cpp  VtkWriter.hh  Writer.hh
src/examples/pingpong/: CMakeLists.txt  PingPongActor.cpp  PingPongActor.hpp  main.cpp
src/examples/serialization/: main.cpp
src/examples/square_root/: CMakeLists.txt  SinkActor.cpp  SinkActor.hpp  SourceActor.cpp  SourceActor.hpp  SquareRootActor.cpp  SquareRootActor.hpp  main.cpp
src/examples/task_test/: CMakeLists.txt  main.cpp
src/examples/test_init/: PingPongActor.cpp  PingPongActor.hpp  StubActor.cpp  StubActor.hpp  main.cpp
